--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "restaurant",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+   
+    "start": "node serve",
+   
+    
   },
   "private": true,
   "dependencies": {
